<resources>
    <string name="app_name">Pleasant Journey</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="prompt_platno">Plat Number</string>
    <string name="prompt_destination">Destination</string>
    <string name="action_submit">Submit</string>

    <string name="title_activity_tracking">TrackingActivity</string>
    <string name="title_current_coord">Current Coordinate</string>
    <string name="title_longitude">Longitude</string>
    <string name="title_latitude">Latitude</string>
    <string name="title_speed">Current Speed / Speed Limit (km/h)</string>
    <string name="title_vehicle_state">Vehicle State</string>
    <string name="title_stable">Stable</string>
    <string name="title_overspeed">Overspeed</string>
    <string name="value_latitude">0</string>
    <string name="value_longitude">0</string>
    <string name="value_speed">0</string>
    <string name="value_speedLimit">0</string>
</resources>
