<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_main_layout"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/platno"
        android:inputType="text"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/prompt_platno" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/destination"
        android:layout_below="@+id/platno"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/prompt_destination" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/server_ip"
        android:inputType="text"
        android:layout_below="@+id/destination"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="SERVER_IP" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_submit"
        android:id="@+id/submit_button"
        android:layout_below="@+id/server_ip"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp"
        android:onClick="startActivityTwo"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
