<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.han.pleasantjourney.TrackingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_latitude"
        android:id="@+id/textview_title_latitude"
        android:textSize="20dp"
        android:layout_marginTop="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textview_value_latitude"
        android:layout_alignTop="@+id/textview_title_latitude"
        android:layout_centerHorizontal="true"
        android:text="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_longitude"
        android:id="@+id/textview_title_longitude"
        android:textSize="20dp"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/textview_value_latitude"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textview_value_longitude"
        android:layout_alignTop="@+id/textview_title_longitude"
        android:layout_alignStart="@+id/textview_value_latitude"
        android:text="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_current_speed"
        android:id="@+id/textview_title_current_speed"
        android:textSize="20dp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textview_title_longitude"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textview_value_current_speed"
        android:editable="false"
        android:text="0"
        android:layout_alignTop="@+id/textview_title_current_speed"
        android:layout_toEndOf="@+id/textview_value_longitude" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_overspeed"
        android:id="@+id/textview_title_overspeed"
        android:textSize="20dp"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/textview_title_current_speed"
        android:layout_alignStart="@+id/textview_title_current_speed" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textview_overspeed"
        android:text="0"
        android:layout_alignBottom="@+id/textview_title_overspeed"
        android:layout_alignStart="@+id/textview_value_current_speed" />

</RelativeLayout>
